# task-list-refactor-ca

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
task_list/: __main__.py  app.py  console.py  task.py
task_list/application/domain/model/: __init__.py  base.py  project.py  task.py  todolist.py
task_list/application/domain/service/: __init__.py  add.py  error.py  execute.py  help.py  setdone.py  show.py
tests/: test_application.py
